samples/_failures_safe/1761558776_4d9b9a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ac390401.c: In function ‘main’:
./samples/SAFE/__tmp_ac390401.c:123:18: error: expected ‘;’ at end of input
  123 |             break
      |                  ^
      |                  ;
./samples/SAFE/__tmp_ac390401.c:123:13: error: expected declaration or statement at end of input
  123 |             break
      |             ^~~~~
./samples/SAFE/__tmp_ac390401.c:123:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ac390401.c:123:13: error: expected declaration or statement at end of input
